--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
             <a href="https://learn.wqu.edu/">WorldQuant University</a> studying Applied AI Lab.
             </p>
             <p>
-            gonna add stuff here lol <a href="hi.com">AB</a> - 
-            where we try to simplify complex topics like <a href="https://www.youtube.com/watch?v=CGM3wwioVmo">linguistics</a>, <a href="https://www.youtube.com/watch?v=QKhFHcfe2KU">philosophy</a>, and <a href="https://www.youtube.com/watch?v=6a3ktknflEM&t=39s">literature</a> using data storytelling. The channel has 
-            garnered over 610,000 subscribers with a total of 44 Million views. I am also the creator of <a href="https://iipmaps.com">iipmaps</a> - a data visualization tool to create custom maps with data.
+            gonna add stuff here lol
           </p>
         </div>
       </div>
