--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
           <div class="col-md-4 col-xs-12">
             <div class="navbar-text logos">
 
-              <a href="https://linkedin.com/in/ashris"><i class="social fa fa-linkedin" aria-hidden="true"></i></a>
-              <a href="https://github.com/iashris"><i class="social fa fa-github" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/in/dibyanshu-kumar/"><i class="social fa fa-linkedin" aria-hidden="true"></i></a>
+              <a href="https://github.com/dkconnect"><i class="social fa fa-github" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
